services/downloads-standard/radarr-portuguese/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-portuguese
  namespace: downloads-standard
spec:
  type: ClusterIP
  selector:
    app: radarr-portuguese
  ports:
  - port: 7878
    targetPort: 7878
    protocol: TCP
    name: http
